--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Prathamesh Chavan
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Final Year Student, IIT Kharagpur
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars0.githubusercontent.com/u/17272661?s=460&v=4 
 
 #
 # Flags below are optional
@@ -18,12 +18,12 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: pc44800@gmail.com
   facebook:
   flickr:
-  github: barryclark/jekyll-now
-  instagram:
-  linkedin:
+  github: pratham-pc
+  instagram: pratham_pc
+  linkedin: prathamesh-chavan
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: jekyllrb
